--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@primevue/themes": "^4.1.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "pinia": "^2.1.7",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.1.0",
     "vue": "^3.4.29",
     "vue-draggable-plus": "^0.5.3",
     "vue-router": "^4.3.3"
